infra/cert-manager/controller/network-policies/network-policy-allow-acme.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-acme-https
  namespace: cert-manager
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
              - 169.254.0.0/16
      ports:
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: ::/0
            except:
              - 2001:db8:42::/64
              - 2001:db8:43::/112
              - fc00::/7
              - fe80::/10
      ports:
        - protocol: TCP
          port: 443
